// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render and create organization 1`] = `
<div>
  <OrganizationDetailsStep
    finished={false}
    onOpen={[Function]}
    open={true}
  >
    <OrganizationDetailsForm
      onContinue={[Function]}
      submitText="continue"
    />
  </OrganizationDetailsStep>
  <PlanStep
    createOrganization={[Function]}
    deleteOrganization={[Function]}
    onFreePlanChoose={[Function]}
    onPaidPlanChoose={[Function]}
    open={false}
    startingPrice="billing.price_format.10"
    subscriptionPlans={
      Array [
        Object {
          "maxNcloc": 100000,
          "price": 10,
        },
        Object {
          "maxNcloc": 250000,
          "price": 75,
        },
      ]
    }
  />
</div>
`;

exports[`should render and create organization 2`] = `
<div>
  <OrganizationDetailsStep
    finished={true}
    onOpen={[Function]}
    open={false}
    organization={
      Object {
        "avatar": "http://example.com/avatar",
        "description": "description-foo",
        "key": "key-foo",
        "name": "name-foo",
        "url": "http://example.com/foo",
      }
    }
  >
    <OrganizationDetailsForm
      onContinue={[Function]}
      organization={
        Object {
          "avatar": "http://example.com/avatar",
          "description": "description-foo",
          "key": "key-foo",
          "name": "name-foo",
          "url": "http://example.com/foo",
        }
      }
      submitText="continue"
    />
  </OrganizationDetailsStep>
  <PlanStep
    createOrganization={[Function]}
    deleteOrganization={[Function]}
    onFreePlanChoose={[Function]}
    onPaidPlanChoose={[Function]}
    open={true}
    startingPrice="billing.price_format.10"
    subscriptionPlans={
      Array [
        Object {
          "maxNcloc": 100000,
          "price": 10,
        },
        Object {
          "maxNcloc": 250000,
          "price": 75,
        },
      ]
    }
  />
</div>
`;
